# fastapi_sqlmodel

./: .gitignore  main.py  pyproject.toml  test_main.py
api/v1/: router.py
api/v1/routes/: items.py
models/: item.py  utils.py
